--- a/content/portfolio/under-the-rock-news.mdx
+++ b/content/portfolio/under-the-rock-news.mdx
@@ -6,9 +6,9 @@ shortDescription: "MVP LLM-based Mindful News Filter"
 link: "https://undertherocknews.com"
 icon: "UnderRockIcon"
 categories: ["Web Development", "Deep Learning"]
-date: "2023-08-15"
+date: "2023-06-15"
 techStack: ["Next.js", "HuggingFace"]
 ---
 
 ## Project Overview
-Long form content in MDX format with rich formatting...
+This project is an MVP LLM-based Mindful News Filter.  It helps users discover high-impact news in a focused and efficient manner.
