change off svg icons to ascii images

--- a/content/portfolio/algo-trading-earnings-calls.mdx
+++ b/content/portfolio/algo-trading-earnings-calls.mdx
@@ -3,7 +3,7 @@ title: "Algo-trading Earnings Calls"
 slug: "algo-trading-earnings-calls"
 size: 1
 shortDescription: "Ensemble model for earnings plays"
-icon: "UpChartIcon"
+icon: "CandlestickChartIcon"
 categories: ["Data Science"]
 date: "2023-02-15"
 techStack: ["Python", "Tensorflow", "News API"]
