--- a/content/portfolio/degen-crypto-jobs.mdx
+++ b/content/portfolio/degen-crypto-jobs.mdx
@@ -4,7 +4,7 @@ slug: "degen-crypto-jobs"
 size: 1
 shortDescription: "Still finding its niche but already getting eyeballs"
 link: "https://degencryptojobs.com"
-icon: "BrowserIcon"
+icon: "DegenLogoIcon"
 categories: ["Web Development"]
 date: "2023-02-15"
 techStack: ["Next.js", "Supabase"]
