--- a/content/portfolio/dreambooth-optimization.mdx
+++ b/content/portfolio/dreambooth-optimization.mdx
@@ -4,7 +4,7 @@ slug: "dreambooth-optimization"
 size: 1
 shortDescription: "Halved VRAM requirements for dreambooth training so it can fit 3080s"
 link: "https://drawanyone.ai/"
-icon: "AIBrainIcon"
+icon: "DreamboothIcon"
 categories: ["Deep Learning"]
 date: "2022-12-15"
 techStack: ["Python", "PyTorch"]
