--- a/content/portfolio/ethtokyo-2023.mdx
+++ b/content/portfolio/ethtokyo-2023.mdx
@@ -4,7 +4,7 @@ slug: "ethtokyo-2023"
 size: 1
 shortDescription: "Analytics of 1inch Fusion Swap's resolvers"
 link: "https://ethglobal.com/showcase/1inch-fusion-dashboard-96pev"
-icon: "MedalIcon"
+icon: "ETHTokyo23Icon"
 categories: ["Data Science"]
 date: "2023-04-15"
 techStack: ["React", "ethers.js", "The Graph"]
