--- a/content/portfolio/marinachain.mdx
+++ b/content/portfolio/marinachain.mdx
@@ -4,7 +4,7 @@ slug: "marinachain"
 size: 2
 shortDescription: "Predicting emissions using satellite data and vessel specs"
 link: "https://marinachain.io/"
-icon: "WaveIcon"
+icon: "MaritimeSatelliteIcon"
 categories: ["Data Science", "Web Development"]
 date: "2022-01-01"
 techStack: ["Python", "PostGres", "Flask"]
