--- a/content/portfolio/mindpointeye.mdx
+++ b/content/portfolio/mindpointeye.mdx
@@ -4,7 +4,7 @@ slug: "mindpointeye"
 size: 2
 shortDescription: "Adding tools to curate datasets and algos to break models in months made me tech lead"
 link: "https://mindpointeye.com/"
-icon: "EyeIcon"
+icon: "EdgeAIIcon"
 categories: ["Deep Learning", "Research"]
 date: "2021-05-10"
 techStack: ["C++", "Tensorflow Lite", "Embedded Linux"]
