--- a/content/portfolio/under-the-rock-news.mdx
+++ b/content/portfolio/under-the-rock-news.mdx
@@ -4,7 +4,7 @@ slug: "under-the-rock-news"
 size: 1
 shortDescription: "MVP LLM-based Mindful News Filter"
 link: "https://undertherocknews.com"
-icon: "UnderRockIcon"
+icon: "UnderTheRockIcon"
 categories: ["Web Development", "Deep Learning"]
 date: "2023-06-15"
 techStack: ["Next.js", "HuggingFace"]
