--- a/content/portfolio/post-quantum-cryptography.mdx
+++ b/content/portfolio/post-quantum-cryptography.mdx
@@ -3,10 +3,10 @@ title: "Post-Quantum Cryptography x Deep Learning"
 slug: "post-quantum-cryptography"
 size: 1
 shortDescription: "Internship on FHE & MPC applied to deep learning"
-icon: "LockModelIcon"
+icon: "PostQuantumEncryptionIcon"
 categories: ["Research", "Deep Learning"]
 date: "2020-05-10"
-techStack: ["Python", "Tensorflow", "SEAL"]
+techStack: ["Python", "Rust"]
 ---
 
 ## Project Overview
