--- a/content/portfolio/degen-crypto-jobs.mdx
+++ b/content/portfolio/degen-crypto-jobs.mdx
@@ -2,14 +2,14 @@
 title: "Crypto Job Board: Degen Crypto Jobs"
 slug: "degen-crypto-jobs"
 size: 1
-shortDescription: "Still finding its niche but already getting eyeballs"
+shortDescription: "Aggregator of crypto jobs"
 link: "https://degencryptojobs.com"
 icon: "DegenLogoIcon"
 categories: ["Web Development"]
 date: "2023-02-15"
-techStack: ["Next.js", "Supabase"]
+techStack: ["Next.js", "ChakraUI", "Supabase"]
 ---
 
 ## Project Overview
 
-Degen Crypto Jobs is a crypto job board.
+Slowly becoming more than just a job aggregator for crypto.
