--- a/content/portfolio/mindpointeye.mdx
+++ b/content/portfolio/mindpointeye.mdx
@@ -12,4 +12,4 @@ techStack: ["C++", "Tensorflow Lite", "Embedded Linux"]
 
 ## Project Overview
 
-This project involved adding tools to curate datasets and algos to break models in months, leading to a tech lead position.
+Startup founded by the inventor of ELMs, specializing in low-power, edge-deployed AI models. I advanced from junior engineer to team lead by spearheading key improvements to our object detection pipeline. I developed in-house tools, including semi-supervised data labelling systems, hyperparameter search automation, and optimizer improvements. Through scrapped data integration, augmentation techniques, and algorithmic enhancements, I improved our best model’s mAP for most applications from 0.70 to 0.85. These efforts also laid the foundation for productizing our object detection solutions.
