--- a/content/portfolio/optoacoustic-mode-solver-for-lasers.mdx
+++ b/content/portfolio/optoacoustic-mode-solver-for-lasers.mdx
@@ -11,4 +11,4 @@ techStack: ["Python", "MATLAB"]
 
 ## Project Overview
 
-This project is a numerical solver to support fibre optic R&D for high power lasers.
+At DSO, a defence research laboratory, I developed a Python-based finite element solver to model opto-acoustic interactions in high-powered laser fibres. This tool facilitated the design of fibres with reduced power loss from backscattering and was selected for showcase from a cohort of forty.
