--- a/content/portfolio/post-quantum-cryptography.mdx
+++ b/content/portfolio/post-quantum-cryptography.mdx
@@ -11,4 +11,4 @@ techStack: ["Python", "Rust"]
 
 ## Project Overview
 
-This project was an internship on FHE & MPC applied to deep learning.
+Researched the use of post-quantum encryption (FHE, MPC, etc.) in deep learning.
