--- a/content/portfolio/algo-trading-earnings-calls.mdx
+++ b/content/portfolio/algo-trading-earnings-calls.mdx
@@ -6,9 +6,9 @@ shortDescription: "Ensemble model for earnings plays"
 icon: "CandlestickChartIcon"
 categories: ["Data Science"]
 date: "2023-02-15"
-techStack: ["Python", "Tensorflow", "News API"]
+techStack: ["Machine Learning", "Wehscrapping"]
 ---
 
 ## Project Overview
 
-This project uses an ensemble model for earnings plays.
+Built and backtested a series of ensemble models used to predict earnings surprises and subsequent stock price returns.
