--- a/content/portfolio/dreambooth-optimization.mdx
+++ b/content/portfolio/dreambooth-optimization.mdx
@@ -7,9 +7,10 @@ link: "https://drawanyone.ai/"
 icon: "DreamboothIcon"
 categories: ["Deep Learning"]
 date: "2022-12-15"
-techStack: ["Python", "PyTorch"]
+techStack: ["PyTorch"]
 ---
 
 ## Project Overview
 
-This project halved VRAM requirements for dreambooth training so it can fit 3080s.
+Back when AI profile pictures were the hype, I helped drawanyone reduce the VRAM requirements for dreambooth: a few-shot finetuning method to update the model on what a "face" of our subject should look like, allowing us to then prompt images of it.
+Through a mix of quantization and improving the regularization step, I halved the VRAM requirements from 24GB to 12GB, meaning we could now use 3080s instead of 3090s for training. This represented a 35% cost reduction for my client and turned them profitable.
