--- a/content/portfolio/marinachain.mdx
+++ b/content/portfolio/marinachain.mdx
@@ -7,9 +7,10 @@ link: "https://marinachain.io/"
 icon: "MaritimeSatelliteIcon"
 categories: ["Data Science", "Web Development"]
 date: "2022-01-01"
-techStack: ["Python", "PostGres", "Flask"]
+techStack: ["Modelling", "Machine Learning", "React"]
 ---
 
 ## Project Overview
 
-This project predicts emissions using satellite data and vessel specs.
+Our goal as a startup was to become the go-to for tokenized carbon credits for the maritime industry.
+For this, we first begun with facilitating the tracking of carbon emissions and performing emissions estimates based on the satellite-tracked path of vessels and the corresponding ship spec data.
