improve post formating, add post

--- a/content/posts/cross-entropy.mdx
+++ b/content/posts/cross-entropy.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cross-Entropy"
+title: "Derivation: Cross-Entropy"
 date: "2025-02-17"
 excerpt: "Derivation of cross-entropy loss from first principles: information theory, entropy, and modelling probability distributions"
 categories: ["deep learning", "math"]
