update portfolio preview

--- a/content/portfolio/under-the-rock-news.mdx
+++ b/content/portfolio/under-the-rock-news.mdx
@@ -1,8 +1,8 @@
 ---
-title: "High Impact News Filter: Under the Rock News"
+title: "Under the Rock News"
 slug: "under-the-rock-news"
 size: 1
-shortDescription: "MVP LLM-based Mindful News Filter"
+shortDescription: "High Impact News filter using an LLM"
 link: "https://undertherocknews.com"
 icon: "UnderTheRockIcon"
 categories: ["Web Development", "Deep Learning"]
