--- a/content/portfolio/algo-trading-earnings-calls.mdx
+++ b/content/portfolio/algo-trading-earnings-calls.mdx
@@ -6,9 +6,7 @@ shortDescription: "Ensemble model for earnings plays"
 icon: "CandlestickChartIcon"
 categories: ["Data Science"]
 date: "2023-02-15"
-techStack: ["Machine Learning", "Wehscrapping"]
+techStack: ["Machine Learning", "Webscraping"]
 ---
-
-## Project Overview
 
 Built and backtested a series of ensemble models used to predict earnings surprises and subsequent stock price returns.
