--- a/content/portfolio/backtesting-passive-crypto-strategies.mdx
+++ b/content/portfolio/backtesting-passive-crypto-strategies.mdx
@@ -1,15 +1,13 @@
 ---
-title: "Backtesting Passive Crypto Strategies"
+title: "Backtesting Crypto Index Fund"
 slug: "backtesting-passive-crypto-strategies"
 size: 2
-shortDescription: "Diversified crypto index fund strategies at size"
+shortDescription: "Testing diversified crypto index fund strategies at size"
 icon: "CryptoChartIcon"
 categories: ["Data Science", "Research"]
 date: "2023-05-10"
-techStack: ["Python", "bt", "Pandas"]
+techStack: ["bt", "Pandas"]
 ---
-
-## Project Overview
 
 My client wanted to test the thesis of a crypto index fund that would adequately capture the skewness of crypto returns, heavily inspired by Bassembinder.
 I gathered crypto data for over 2,000+ eligible tokens spanning a decade, including many of which that would eventually go to zero (and did lots of data cleaning). 
