--- a/content/portfolio/mindpointeye.mdx
+++ b/content/portfolio/mindpointeye.mdx
@@ -7,9 +7,8 @@ link: "https://mindpointeye.com/"
 icon: "EdgeAIIcon"
 categories: ["Deep Learning", "Research"]
 date: "2021-05-10"
-techStack: ["C++", "Tensorflow Lite", "Embedded Linux"]
+techStack: ["rknn", "pytorch"]
 ---
 
-## Project Overview
 
 Startup founded by the inventor of ELMs, specializing in low-power, edge-deployed AI models. I advanced from junior engineer to team lead by spearheading key improvements to our object detection pipeline. I developed in-house tools, including semi-supervised data labelling systems, hyperparameter search automation, and optimizer improvements. Through scrapped data integration, augmentation techniques, and algorithmic enhancements, I improved our best model’s mAP for most applications from 0.70 to 0.85. These efforts also laid the foundation for productizing our object detection solutions.
