add related posts section

--- a/content/portfolio/airdrops-as-a-service.mdx
+++ b/content/portfolio/airdrops-as-a-service.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Airdrops-as-a-Service Startup"
+title: "Airdrops-as-a-Service"
 slug: "airdrops-as-a-service"
 size: 1
-shortDescription: "Pacts: A pre-seed startup offering anti-sybil point campaigns"
+shortDescription: "Pacts: A pre-seed startup helping protocols to setup and run anti-sybil points-based airdrop campaigns"
 icon: "AirdropIcon"
 categories: ["Web Development", "Analytics"]
 date: "2024-02-01"
