--- a/content/posts/cross-entropy.mdx
+++ b/content/posts/cross-entropy.mdx
@@ -3,6 +3,7 @@ title: "Derivation: Cross-Entropy"
 date: "2025-02-17"
 excerpt: "Derivation of cross-entropy loss from first principles: information theory, entropy, and modelling probability distributions"
 categories: ["deep learning", "math"]
+relatedPosts: ["cut-cross-entropy"]
 ---
 
 ## Derivation
